k8s/base/mlAPI-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlapi
  template:
    metadata:
      labels:
        app: mlapi
    spec:
      containers:
      - name: mlapi
        image: mlapi:latest
        imagePullPolicy: Never  
        ports:
        - containerPort: 8000
