k8s/base/mlAPI-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlapi-service
spec:
  selector:
    app: mlapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
