k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlapi-ingress
spec:
  rules:
    - host: mlapi.example.com   # to be overridden by dev-specific patch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlapi-service
                port:
                  number: 80
